<resources>
    <string name="app_name">Panhelpmic</string>
    <string name="esp">Español</string>
    <string name="ing">Inglés</string>
    <string name="title_activity_actividad__principal">Actividad_Principal</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="is">Iniciar sesión</string>
    <string name="nickError">El nick no pude contener caracteres especiales: ., #, $, [, ]</string>
    <string name="reg">Registrate</string>
    <string name="ntc">¿No tienes cuenta?</string>
    <string name="ndu">Nombre de usuario</string>
    <string name="contra">Contraseña</string>
    <string name="user_incorrecto">El usuario o la contraseña son incorrectos.</string>
    <string name="nombre">Nombre:</string>
    <string name="ape">Apellidos:</string>
    <string name="dir">Dirección:</string>
    <string name="tel">Teléfono:</string>
    <string name="nick">Nickname:</string>
    <string name="pass">Contraseña:</string>
    <string name="sup">Soy un profesional.</string>
    <string name="qssp">¿Qué significa ser profesional?</string>
    <string name="sfdp">Seleccionar foto de perfil:</string>
    <string name="dpdu">Dar permiso de ubicación:</string>
    <string name="Continuar">Continuar</string>
    <string name="tlcso">Todos los campos son obligatorios.</string>
    <string name="enduye">Ese nombre de usuario ya existe.</string>
    <string name="contra1">La contraseña debe tener al menos un número.</string>
    <string name="contra2">La contraseña debe tener al menos una mayúscula.</string>
    <string name="contra3">La contraseña debe tener al menos siete caracteres.</string>
    <string name="ucc">Usuario creado correctamente.</string>
    <string name="endtdsr">El número de teléfono debe ser real.</string>
    <string name="isc">Imagen subida correctamente.</string>
    <string name="pd">Permiso denegado.</string>">
    <string name="setdpqe">Selecciona el tipo de profesional que eres:</string>
    <string name="sani">Sanitario.</string>
    <string name="abo">Abogado.</string>
    <string name="sudqaqpe">Sube un documento que acredite que puedes ejercer como tal.</string>
    <string name="confirmar">Confirmar</string>
    <string name="ite">Introduce tu especialidad:</string>
    <string name="tqsutdp">Tienes que seleccionar un tipo de profesional.</string>
    <string name="tqite">Tienes que introducir tu especialidad.</string>
    <string name="cerrar">Cerrar</string>
    <string name="normal">Normal</string>
    <string name="satelite">Satélite</string>
    <string name="fab">Servicios básicos</string>
    <string name="fae">Servicios de entretenimiento</string>
    <string name="fap">Servicios profesionales</string>
    <string name="fm">Mapa de anuncios</string>
    <string name="fpu">Perfil de usuario</string>
    <string name="fca">Publicando anuncio</string>
    <string name="vp">Ver perfil</string>
    <string name="pa">Publicar anuncio</string>
    <string name="vm">Ver mapa</string>
    <string name="music">Música</string>
    <string name="idioma">Idioma</string>
    <string name="titulo">Título:</string>
    <string name="descripcion">Descripción:</string>
    <string name="anunciante">Anunciante:</string>
    <string name="fecha">Fecha:</string>
    <string name="hora">Hora:</string>
    <string name="ad_prof_1">Primero tienes que seleccionar si eres un sanitario o un abogado, subir el documento que acredite que puedes ejercer y pinchar en confirmar. </string>
    <string name="ad_prof_2">Si eres un sanitario, aparecerá un recuadro donde debes introducir tu especialidad (dermatología, otorrinologia, oftalmología...)</string>
    <string name="ad_ayuda">Los usuarios profesionales son los únicos que pueden subir contenido profesional. Si eres un médico, enfermero o abogado puedes prestar tus servicios marcando ésta categoría. </string>
    <string name="ad_ayuda_2">Deberás presentar un documento que acredite que puedes ejercer.</string>
    <string name="it">Introduce título.</string>
    <string name="id">Introduce descripción.</string>
    <string name="setda">Selecciona el tipo de anuncio:</string>
    <string name="sf">Subir foto</string>
    <string name="sfech">Seleccionar fecha</string>
    <string name="sh">Seleccionar hora</string>
    <string name="hde">Hora del evento</string>
    <string name="fde">Fecha del evento</string>
    <string name="ajustes">Ajustes</string>
    <string name="cerrarsesion">Cerrar sesión</string>

</resources>
