<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".Actividad_Registro">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/nombre"
            android:textSize="@dimen/letra_form" />

        <EditText
            android:id="@+id/editText_nombre"
            android:layout_width="@dimen/ancho_form_et"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/morado"
            android:ems="10"
            android:inputType="textPersonName" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView13"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/ape"
            android:textSize="@dimen/letra_form" />

        <EditText
            android:id="@+id/editText_apellidos"
            android:layout_width="@dimen/ancho_form_et"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/morado"
            android:ems="10"
            android:inputType="textPersonName"
            android:paddingTop="10sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView14"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/letra_form"
            android:layout_weight="1"
            android:text="Email:" />

        <EditText
            android:id="@+id/editText_email"
            android:layout_width="@dimen/ancho_form_et"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/morado"
            android:ems="10"
            android:inputType="textEmailAddress"
            android:paddingTop="10sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView15"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/tel"
            android:textSize="@dimen/letra_form" />

        <EditText
            android:id="@+id/editText_telefono"
            android:layout_width="@dimen/ancho_form_et"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/morado"
            android:ems="10"
            android:inputType="phone"
            android:paddingTop="10sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView16"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/dir"
            android:textSize="@dimen/letra_form" />

        <EditText
            android:id="@+id/editText_dirección"
            android:layout_width="@dimen/ancho_form_et"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/morado"
            android:ems="10"
            android:inputType="textPersonName"
            android:paddingTop="10sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView18"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/nick"
            android:textSize="@dimen/letra_form" />

        <EditText
            android:id="@+id/editText_usuarioC"
            android:layout_width="@dimen/ancho_form_et"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/morado"
            android:ems="10"
            android:inputType="textPersonName"
            android:paddingTop="10sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView19"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/pass"
            android:textSize="@dimen/letra_form" />

        <EditText
            android:id="@+id/editText_contraC"
            android:layout_width="@dimen/ancho_form_et"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/morado"
            android:ems="10"
            android:inputType="textPassword"
            android:paddingTop="10sp" />
    </LinearLayout>

    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/morado"
        android:paddingTop="20sp"
        android:text="@string/sup"
        android:textColor="@color/morado"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/button_profesiona"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/common_google_signin_btn_text_dark_disabled"
        android:paddingTop="20sp"
        android:text="@string/qssp"
        android:textColor="@color/morado"
        android:textSize="8sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView10"
            android:layout_width="315dp"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/morado"
            android:text="@string/sfdp"
            android:textSize="@dimen/letra_form" />

        <Button
            android:id="@+id/button_foto_usuario"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@drawable/img_grande" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView23"
            android:layout_width="315dp"
            android:layout_height="wrap_content"
            android:text="@string/dpdu"
            android:textSize="@dimen/letra_form" />

        <Button
            android:id="@+id/button_permitir_ubica"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@drawable/ubica_grande" />
    </LinearLayout>

    <Button
        android:id="@+id/button_siguiente"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/salmon"
        android:paddingTop="20sp"
        android:text="Continuar" />

</LinearLayout>