<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragment_perfil_usuario">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/imageView_perfilU"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginTop="75dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:src="@tools:sample/avatars" />

        <TextView
            android:id="@+id/textView9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="234dp"
            android:text="@string/nombre"
            android:textColor="@color/morado"
            android:textSize="@dimen/letra_form"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView_NombreU"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="36dp"
            android:layout_marginTop="56dp"
            android:text="Nombre: Pepito Pérez Martínez"
            android:textSize="@dimen/letra_form"
            app:layout_constraintStart_toEndOf="@+id/textView9"
            app:layout_constraintTop_toBottomOf="@+id/imageView_perfilU" />

        <TextView
            android:id="@+id/textView25"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="35dp"
            android:text="@string/nick"
            android:textColor="@color/morado"
            android:textSize="@dimen/letra_form"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView9" />

        <TextView
            android:id="@+id/textView_NickU"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="36dp"
            android:text="Nick: pepe"
            android:textSize="@dimen/letra_form"
            app:layout_constraintStart_toEndOf="@+id/textView25"
            app:layout_constraintTop_toBottomOf="@+id/textView_NombreU" />

        <TextView
            android:id="@+id/textView26"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="35dp"
            android:text="@string/dir"
            android:textColor="@color/morado"
            android:textSize="@dimen/letra_form"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView25" />

        <TextView
            android:id="@+id/textView_DireccionU"
            android:layout_width="270sp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="93dp"
            android:text="Dirección: Calle Embajadores 56 1B 28005"
            android:textSize="@dimen/letra_form"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/textView26"
            app:layout_constraintTop_toBottomOf="@+id/textView_NombreU" />

        <TextView
            android:id="@+id/textView28"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="50dp"
            android:text="Email:"
            android:textColor="@color/morado"
            android:textSize="@dimen/letra_form"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView26" />

        <TextView
            android:id="@+id/textView_CorreoU"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="50dp"
            android:text="E-mail: nekelia@gmail.com"
            android:textSize="@dimen/letra_form"
            app:layout_constraintStart_toEndOf="@+id/textView28"
            app:layout_constraintTop_toBottomOf="@+id/textView26" />

        <TextView
            android:id="@+id/textView29"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="35dp"
            android:text="@string/tel"
            android:textColor="@color/morado"
            android:textSize="@dimen/letra_form"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView_CorreoU" />

        <TextView
            android:id="@+id/textView_TelefonoU"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="35dp"
            android:text="Teléfono: 7654387"
            android:textSize="@dimen/letra_form"
            app:layout_constraintStart_toEndOf="@+id/textView29"
            app:layout_constraintTop_toBottomOf="@+id/textView_CorreoU" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>